--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="stylesheet" href="./sass/styles.css" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="style-head">
+      <form class="search-form" id="search-form">
+      <input type="text" class="input-style" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button class="button-style" type="submit">Search</button>
+    </form>
+  </div> 
   </body>
 </html>
