--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Photo Search</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="./sass/styles.css" />
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <div class="style-head">
@@ -14,5 +14,20 @@
       <button class="button-style" type="submit">Search</button>
     </form>
   </div> 
+  <div class="gallery js-gallery">
+    <!-- images from backend -->
+  </div>
+  
+  <button hidden type="button" class="load-more-button js-load-more-button">
+    Load more
+  </button>
+  
+  <div class="js-observer-target"></div>
+  
+  <button type="button" class="js-scrollup-button" title="Go to top">
+    <i class="fa fa-chevron-circle-up"></i>
+  </button>
+
+  <script src="./index.js" type="module"></script>
   </body>
 </html>
